Finished all the endpoint implementation
